--- a/about.html
+++ b/about.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>title</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/about.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,10 +19,10 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-sm bg-danger navbar-dark">
+    <nav class="navbar fixed-top navbar-expand-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
-          ><img id="lychee-logo" src="images/logo.png" alt="Logo"
+          ><img id="lychee-logo" src="images/lychee-buddy.gif" alt="Logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -46,13 +47,12 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item p-3">
-              <a class="nav-link" href="login.html">Login</a>
+              <a class="nav-link" href="login.html"><button type="button" class="btn btn-success">Login/Signup</button></a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="test"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
