--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-sm">
@@ -34,25 +34,53 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item p-3">
+            <li class="nav-item p-2">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item p-3">
+            <li class="nav-item p-2">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item p-3">
+            <li class="nav-item p-2">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
-            <li class="nav-item p-3">
+            <li class="nav-item p-2">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item p-3">
-              <a class="nav-link" href="login.html"><button type="button" class="btn btn-success">Login/Signup</button></a>
+            <li class="nav-item p-1">
+              <a class="nav-link" href="login.html"
+                ><button type="button" class="btn btn-success">
+                  Login/Signup
+                </button></a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <div class="hero-index">
+      <img id="gatherer" src="images/lychee-gatherer.jpg" alt="" />
+    </div>
+    <div class="container section1-index">
+      <div class="row">
+        <div class="col-sm-6 col-md-2">
+          <img class="img-fluid" src="images/logo.png" alt="" />
+        </div>
+        <div class="col-sm-6 col-md-8">
+          <h1 class="welcome"><b>Welcome to Luxury Lychee Farms</b></h1>
+          <p>
+            Here at Luxury Lychee Farms we conjure the freshest and juciest
+            lychee in the world. The amount of care we put into our farms and
+            employees radiates in our decident fruit. Our farms stray from harsh
+            chemicals and pestisides by finding more organic ways to care for
+            our harvest. Along with producing these sweet treats for simple
+            consumption we also can, make preserves, baked goods, and much more.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-2">
+          <img class="img-fluid" src="images/lychee-jar" alt="" />
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
