--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,35 @@
         </div>
       </div>
     </nav>
+     <!-- START OF FOOTER SECTION -->
+     <footer>
+      <div class="footer-full">
+        <div class="footer-list">
+          <ul>
+            <li><a class="footer-links" href="index.html">Home</a></li>
+            <li><a class="footer-links" href="about.html">About</a></li>
+          </ul>
+          <ul>
+            <li><a class="footer-links" href="gallery.html">Gallery</a></li>
+            <li><a class="footer-links" href="contact.html">Contact</a></li>
+          </ul>
+          <ul>
+            <li><a class="footer-links" href="login.html">Login</a></li>
+            <li><a class="footer-links" href="signup.html">Signup</a></li>
+          </ul>
+        </div>
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram insta"></i>
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+
+        <div class="est">
+          <p><i>Est. 2024. Luxury Lychee Farms</i></p>
+        </div>
+      </div>
+    </footer>
+    <!-- END OF FOOTER SECTION -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
