--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
+    <!-- START OF NAVBAR -->
     <nav class="navbar fixed-top navbar-expand-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
@@ -57,9 +58,13 @@
         </div>
       </div>
     </nav>
+    <!-- END OF NAVBAR -->
+    <!-- START OF HER0-SECTION -->
     <div class="hero-index">
       <img id="gatherer" src="images/lychee-gatherer.jpg" alt="" />
     </div>
+    <!-- END OF HERO-SECTION -->
+    <!-- START OF FIRST SECTION -->
     <div class="container section1-index">
       <div class="row">
         <div class="col-sm-6 col-md-2">
@@ -81,6 +86,30 @@
         </div>
       </div>
     </div>
+    <!-- END OF FIRST SECTION -->
+    <!-- START OF SECOND SECTION -->
+    <div class="container section1-index">
+      <div class="row">
+        <div class="col-sm-6 col-md-3">
+          <h4><i>What is a Lychee?</i></h4>
+          <p></p>
+        </div>
+        <div class="col-sm-6 col-md-6">
+          <img class="img-fluid" src="images/lychee-bundle.png" alt="" />
+        </div>
+        <div class="col-sm-12 col-md-3">
+          <h4><i>What is Lychee used in?</i></h4>
+          <p>Lychee is common in Vietnam</p>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECOND SECTION -->
+    <!-- START OF THIRD SECTION -->
+    <div class="col-sm-12 col-md-12">
+      <img class="img-fluid" src="images/pop-up.gif" alt="" />
+    </div>
+    <!-- END OF THIRD SECTION -->
+    <!-- START OF FOOTER SECTION -->
     <footer>
       <div class="footer-full">
         <div class="footer-list">
@@ -94,7 +123,7 @@
           </ul>
           <ul>
             <li><a class="footer-links" href="login.html">Login</a></li>
-            <li><a  class="footer-links"href="signup.html">Signup</a></li>
+            <li><a class="footer-links" href="signup.html">Signup</a></li>
           </ul>
         </div>
         <div class="icons">
@@ -102,13 +131,13 @@
           <i class="fa-brands fa-instagram insta"></i>
           <i class="fa-brands fa-facebook"></i>
         </div>
-         
-          <div class="est">
-            <p><i>Est. 2024. Luxury Lychee Farms</i></p>
-          </div>
-       
+
+        <div class="est">
+          <p><i>Est. 2024. Luxury Lychee Farms</i></p>
+        </div>
       </div>
     </footer>
+    <!-- END OF FOOTER SECTION -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
