--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   </head>
   <body>
+    <!-- START OF NAVBAR -->
     <nav class="navbar fixed-top navbar-expand-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
@@ -53,6 +54,67 @@
         </div>
       </div>
     </nav>
+    <!-- END OF NAVBAR -->
+     <!-- START OF HER0-SECTION -->
+     <div class="hero-index">
+      <img id="gatherer" src="images/lychee-index.jpg" alt="" />
+    </div>
+    <!-- END OF HERO-SECTION -->
+    <!-- START OF FIRST SECTION -->
+    <div class="container section1-index">
+      <div class="row">
+        <div class="col-sm-6 col-md-2">
+          <img class="img-fluid" src="images/logo.png" alt="" />
+        </div>
+        <div class="col-sm-6 col-md-8">
+          <h1 class="welcome"><b>Welcome to Luxury Lychee Farms</b></h1>
+          <p>
+            Here at Luxury Lychee Farms we conjure the freshest and juciest
+            lychee in the world. The amount of care we put into our farms and
+            employees radiates in our decident fruit. Our farms stray from harsh
+            chemicals and pestisides by finding more organic ways to care for
+            our harvest. Along with producing these sweet treats for simple
+            consumption we also can, make preserves, baked goods, and much more.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-2">
+          <img class="img-fluid" src="images/lychee-jar" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- END OF FIRST SECTION -->
+    <!-- START OF SECOND SECTION -->
+    <div class="container section2-index">
+      <div class="row">
+        <div class="col-sm-6 col-md-3 what">
+          <h4><i>What is a Lychee?</i></h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
+            sed, voluptatem recusandae sit rerum quasi totam a ea quibusdam fuga
+            architecto nostrum cum harum. Ipsam itaque molestiae perferendis
+            praesentium odio!
+          </p>
+        </div>
+        <div class="col-sm-6 col-md-6">
+          <img class="img-fluid" src="images/lychee-bundle.png" alt="" />
+        </div>
+        <div class="col-sm-12 col-md-3 use">
+          <h4><i>What is Lychee used in?</i></h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            hic voluptas eos incidunt, nostrum doloremque sint enim voluptate
+            quis qui aspernatur, deleniti, facilis earum similique illo. Nobis
+            sed commodi consequuntur!
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECOND SECTION -->
+    <!-- START OF THIRD SECTION -->
+    <div>
+      <img class="" src="" alt="" />
+    </div>
+    <!-- END OF THIRD SECTION -->
      <!-- START OF FOOTER SECTION -->
      <footer>
       <div class="footer-full">
