--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <!-- END OF NAVBAR -->
     <!-- START OF HER0-SECTION -->
     <div class="hero-index">
-      <img id="gatherer" src="images/lychee-gatherer.jpg" alt="" />
+      <img id="gatherer" src="images/lychee-index.jpg" alt="Lychee Farm" />
     </div>
     <!-- END OF HERO-SECTION -->
     <!-- START OF FIRST SECTION -->
     <div class="container section1-index">
       <div class="row">
         <div class="col-sm-6 col-md-2">
-          <img class="img-fluid" src="images/logo.png" alt="" />
+          <img class="img-fluid" src="images/logo.png" alt="Lychee Logo" />
         </div>
         <div class="col-sm-6 col-md-8">
           <h1 class="welcome"><b>Welcome to Luxury Lychee Farms</b></h1>
@@ -82,33 +82,44 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-2">
-          <img class="img-fluid" src="images/lychee-jar" alt="" />
+          <img class="img-fluid" src="images/lychee-jar" alt="Jar of Lychee" />
         </div>
       </div>
     </div>
     <!-- END OF FIRST SECTION -->
     <!-- START OF SECOND SECTION -->
-    <div class="container section1-index">
+    <div class="container section2-index">
       <div class="row">
-        <div class="col-sm-6 col-md-3">
+        <div class="col-sm-6 col-md-3 what">
           <h4><i>What is a Lychee?</i></h4>
-          <p></p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
+            sed, voluptatem recusandae sit rerum quasi totam a ea quibusdam fuga
+            architecto nostrum cum harum. Ipsam itaque molestiae perferendis
+            praesentium odio!
+          </p>
         </div>
         <div class="col-sm-6 col-md-6">
-          <img class="img-fluid" src="images/lychee-bundle.png" alt="" />
+          <img class="img-fluid" src="images/lychee-bundle.png" alt="Lychee Bundle" />
         </div>
-        <div class="col-sm-12 col-md-3">
+        <div class="col-sm-12 col-md-3 use">
           <h4><i>What is Lychee used in?</i></h4>
-          <p>Lychee is common in Vietnam</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            hic voluptas eos incidunt, nostrum doloremque sint enim voluptate
+            quis qui aspernatur, deleniti, facilis earum similique illo. Nobis
+            sed commodi consequuntur!
+          </p>
         </div>
       </div>
     </div>
     <!-- END OF SECOND SECTION -->
     <!-- START OF THIRD SECTION -->
-    <div class="col-sm-12 col-md-12">
-      <img class="img-fluid" src="images/pop-up.gif" alt="" />
+    <div>
+      <img class="img-fluid home-of-lychee" src="images/home-of-lychee.jpg" alt="Home within lychee farm" />
     </div>
     <!-- END OF THIRD SECTION -->
+   
     <!-- START OF FOOTER SECTION -->
     <footer>
       <div class="footer-full">
