--- a/login.html
+++ b/login.html
@@ -19,8 +19,11 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
-     <!-- START OF FOOTER SECTION -->
-     <footer>
+    <!-- START OF FORM -->
+
+    <!-- END OF FORM -->
+    <!-- START OF FOOTER SECTION -->
+    <footer>
       <div class="footer-full">
         <div class="footer-list">
           <ul>
