Added comments and structure
Added the same structure to about and contact from index. Then added some comments to distinguish where navbar is located.

--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   </head>
   <body>
+    <!-- START OF NAVBAR -->
     <nav class="navbar fixed-top navbar-expand-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
@@ -53,6 +54,7 @@
         </div>
       </div>
     </nav>
+    <!-- END OF NAVBAR -->
      <!-- START OF FOOTER SECTION -->
      <footer>
       <div class="footer-full">
