--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/about.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
     <!-- START OF NAVBAR -->
@@ -48,46 +48,47 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item p-1">
-              <a class="nav-link" href="login.html"><button type="button" class="btn btn-success">Login/Signup</button></a>
+              <a class="nav-link" href="login.html"
+                ><button type="button" class="btn btn-success">
+                  Login/Signup
+                </button></a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- END OF NAVBAR -->
-     <!-- START OF HER0-SECTION -->
-     <div class="hero-index">
+    <!-- START OF HER0-SECTION -->
+    <div class="hero-index">
       <img id="gatherer" src="images/lychee-index.jpg" alt="" />
     </div>
     <!-- END OF HERO-SECTION -->
     <!-- START OF FIRST SECTION -->
-    <div class="container section1-index">
+    <div class="container section1-about">
       <div class="row">
         <div class="col-sm-6 col-md-2">
-          <img class="img-fluid" src="images/logo.png" alt="" />
+          <img class="img-fluid" src="" alt="" />
         </div>
         <div class="col-sm-6 col-md-8">
-          <h1 class="welcome"><b>Welcome to Luxury Lychee Farms</b></h1>
+          <h1 class="welcome"><b>Luxury Lychee Farms</b></h1>
           <p>
-            Here at Luxury Lychee Farms we conjure the freshest and juciest
-            lychee in the world. The amount of care we put into our farms and
-            employees radiates in our decident fruit. Our farms stray from harsh
-            chemicals and pestisides by finding more organic ways to care for
-            our harvest. Along with producing these sweet treats for simple
-            consumption we also can, make preserves, baked goods, and much more.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum
+            quidem pariatur porro at vitae atque omnis. Culpa, quis omnis sit
+            rem impedit in illo officia? Cum deleniti deserunt sint.
           </p>
         </div>
         <div class="col-sm-12 col-md-2">
-          <img class="img-fluid" src="images/lychee-jar" alt="" />
+          <img class="img-fluid" src="" alt="" />
         </div>
       </div>
     </div>
     <!-- END OF FIRST SECTION -->
     <!-- START OF SECOND SECTION -->
-    <div class="container section2-index">
+    <div class="container section2-about">
       <div class="row">
-        <div class="col-sm-6 col-md-3 what">
-          <h4><i>What is a Lychee?</i></h4>
+        <div class="col-sm-6 col-md-3">
+          <h4><i>Lychee?</i></h4>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
             sed, voluptatem recusandae sit rerum quasi totam a ea quibusdam fuga
@@ -96,10 +97,10 @@
           </p>
         </div>
         <div class="col-sm-6 col-md-6">
-          <img class="img-fluid" src="images/lychee-bundle.png" alt="" />
+          <img class="img-fluid" src="" alt="" />
         </div>
-        <div class="col-sm-12 col-md-3 use">
-          <h4><i>What is Lychee used in?</i></h4>
+        <div class="col-sm-12 col-md-3">
+          <h4><i>Lychee</i></h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
             hic voluptas eos incidunt, nostrum doloremque sint enim voluptate
@@ -115,8 +116,8 @@
       <img class="" src="" alt="" />
     </div>
     <!-- END OF THIRD SECTION -->
-     <!-- START OF FOOTER SECTION -->
-     <footer>
+    <!-- START OF FOOTER SECTION -->
+    <footer>
       <div class="footer-full">
         <div class="footer-list">
           <ul>
