--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/contact.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -16,9 +16,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
+    <!-- START OF NAVBAR -->
     <nav class="navbar fixed-top navbar-expand-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
@@ -47,14 +48,77 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item p-1">
-              <a class="nav-link" href="login.html"><button type="button" class="btn btn-success">Login/Signup</button></a>
+              <a class="nav-link" href="login.html"
+                ><button type="button" class="btn btn-success">
+                  Login/Signup
+                </button></a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-     <!-- START OF FOOTER SECTION -->
-     <footer>
+    <!-- END OF NAVBAR -->
+    <!-- START OF HER0-SECTION -->
+    <div class="hero-contact">
+      <img id="gatherer" src="" alt="" />
+    </div>
+    <!-- END OF HERO-SECTION -->
+    <!-- START OF FIRST SECTION -->
+    <div class="container section1-contact">
+      <div class="row">
+        <div class="col-sm-6 col-md-2">
+          <img class="img-fluid" src="" alt="" />
+        </div>
+        <div class="col-sm-6 col-md-8">
+          <h1 class=""><b>Luxury Lychee Farms</b></h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed animi
+            vitae tenetur culpa debitis porro ducimus, beatae molestiae
+            perferendis iusto quas sit similique dignissimos non illo odit
+            corrupti explicabo consectetur.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-2">
+          <img class="img-fluid" src="" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- END OF FIRST SECTION -->
+    <!-- START OF SECOND SECTION -->
+    <div class="container section2-contact">
+      <div class="row">
+        <div class="col-sm-6 col-md-3">
+          <h4><i>Lychee?</i></h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
+            sed, voluptatem recusandae sit rerum quasi totam a ea quibusdam fuga
+            architecto nostrum cum harum. Ipsam itaque molestiae perferendis
+            praesentium odio!
+          </p>
+        </div>
+        <div class="col-sm-6 col-md-6">
+          <img class="img-fluid" src="" alt="" />
+        </div>
+        <div class="col-sm-12 col-md-3">
+          <h4><i>Lychee</i></h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            hic voluptas eos incidunt, nostrum doloremque sint enim voluptate
+            quis qui aspernatur, deleniti, facilis earum similique illo. Nobis
+            sed commodi consequuntur!
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECOND SECTION -->
+    <!-- START OF THIRD SECTION -->
+    <div>
+      <img class="img-fluid" src="" alt="" />
+    </div>
+    <!-- END OF THIRD SECTION -->
+    <!-- START OF FOOTER SECTION -->
+    <footer>
       <div class="footer-full">
         <div class="footer-list">
           <ul>
