--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- END OF NAVBAR -->
     <!-- START OF HER0-SECTION -->
     <div class="hero-index">
-      <img id="gatherer" src="images/lychee-index.jpg" alt="Lychee Farm" />
+      <!-- <img id="gatherer" src="images/about-lychee2.jpg" alt="Lychee Farm" /> -->
     </div>
     <!-- END OF HERO-SECTION -->
     <!-- START OF FIRST SECTION -->
