--- a/about.html
+++ b/about.html
@@ -60,26 +60,38 @@
     </nav>
     <!-- END OF NAVBAR -->
     <!-- START OF HER0-SECTION -->
-    <div class="hero-index">
-      <img id="gatherer" src="images/lychee-index.jpg" alt="" />
+    <div class="hero-about">
+      <img id="about-lychee" src="images/landscape.jpg" alt="Lychee Plant" />
     </div>
     <!-- END OF HERO-SECTION -->
     <!-- START OF FIRST SECTION -->
     <div class="container section1-about">
       <div class="row">
-        <div class="col-sm-6 col-md-2">
-          <img class="img-fluid" src="" alt="" />
+        <div class="col-sm-6 col-md-3">
+          <img
+            class="img-fluid bigfarm"
+            src="images/bigfarm.jpg"
+            alt="Photo of Lychee Farm"
+          />
         </div>
-        <div class="col-sm-6 col-md-8">
-          <h1 class="welcome"><b>Luxury Lychee Farms</b></h1>
+        <div class="col-sm-6 col-md-6">
+          <h1 class=""><b>Luxury Lychee Farms</b></h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum
-            quidem pariatur porro at vitae atque omnis. Culpa, quis omnis sit
-            rem impedit in illo officia? Cum deleniti deserunt sint.
+            Luxury Lychee Farms was founded in 1952 by Kaimana and Groff Lee in
+            central Hawaii. They began as small farmers with just a few plants.
+            After introducing this fruit to the locals, everyone found a true
+            love of this plant. Most of the families in their area were fairly
+            poverished and the Lees wanted to help support it's community and
+            found oppurtunity in this new beloved fruit. By 1971 they had grown
+            exponentially and employed 76% of their region. Although the farming
+            was gruelling work they made sure to take care of their employees.
+            With excellent compensation, extensive vacation, maternal leave just
+            to say a few these employees became family. Now with the same
+            idealisms they always have, they have expanded to Vietnam as well.
           </p>
         </div>
-        <div class="col-sm-12 col-md-2">
-          <img class="img-fluid" src="" alt="" />
+        <div class="col-sm-12 col-md-3">
+          <img class="img-fluid" src="images/lychee-greens.png" alt="" />
         </div>
       </div>
     </div>
@@ -90,14 +102,18 @@
         <div class="col-sm-6 col-md-3">
           <h4><i>Lychee?</i></h4>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
-            sed, voluptatem recusandae sit rerum quasi totam a ea quibusdam fuga
-            architecto nostrum cum harum. Ipsam itaque molestiae perferendis
-            praesentium odio!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+            inventore minus animi labore delectus esse expedita nemo nesciunt
+            maiores unde tenetur quaerat voluptatibus incidunt repellat
+            exercitationem magni, rem saepe dolor!
           </p>
         </div>
         <div class="col-sm-6 col-md-6">
-          <img class="img-fluid" src="" alt="" />
+          <img
+            class="img-fluid"
+            src="images/pop-up.gif"
+            alt="Animated Lychee"
+          />
         </div>
         <div class="col-sm-12 col-md-3">
           <h4><i>Lychee</i></h4>
@@ -112,8 +128,8 @@
     </div>
     <!-- END OF SECOND SECTION -->
     <!-- START OF THIRD SECTION -->
-    <div>
-      <img class="" src="" alt="" />
+    <div class="bear-draw">
+      <img class="farmer" src="images/lychee-farmer.jpg" alt="" />
     </div>
     <!-- END OF THIRD SECTION -->
     <!-- START OF FOOTER SECTION -->
