--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/gallery.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
     <!-- START OF NAVBAR -->
@@ -48,15 +48,39 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item p-1">
-              <a class="nav-link" href="login.html"><button type="button" class="btn btn-success">Login/Signup</button></a>
+              <a class="nav-link" href="login.html"
+                ><button type="button" class="btn btn-success">
+                  Login/Signup
+                </button></a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- END OF NAVBAR -->
-     <!-- START OF FOOTER SECTION -->
-     <footer>
+    <!-- START OF HER0-SECTION -->
+    <div class="hero-gallery">
+      <img id="" src="" alt="" />
+    </div>
+    <!-- END OF HERO-SECTION -->
+    <!-- START OF FIRST SECTION -->
+    <div class="container section1-gallery">
+      <div class="row">
+        <div class="col-sm-6 col-md-4">
+          <img class="img-fluid" src="images/landscape.jpg" alt="Lychee Logo" />
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <img class="img-fluid" src="images/lychee-gatherer.jpg" alt="Lychee Logo" />
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <img class="img-fluid" src="images/farm.jpg" alt="Jar of Lychee" />
+        </div>
+      </div>
+    </div>
+    <!-- END OF FIRST SECTION -->
+    <!-- START OF FOOTER SECTION -->
+    <footer>
       <div class="footer-full">
         <div class="footer-list">
           <ul>
