--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/login.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,11 +16,48 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
   </head>
   <body>
-     <!-- START OF FOOTER SECTION -->
-     <footer>
+    <!-- START OF FORM -->
+    <div class="form d-flex justify-content-center align-items-center">
+      <form action="/action_page.php">
+        <div class="mb-3 mt-3 signin">
+          <label for="email" class="form-label">Email:</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="Enter email"
+            name="email"
+          />
+        </div>
+        <div class="mb-3 signin">
+          <label for="pwd" class="form-label">Password:</label>
+          <input
+            type="password"
+            class="form-control"
+            id="pwd"
+            placeholder="Enter password"
+            name="pswd"
+          />
+        </div>
+        <div class="form-check mb-3 signin">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" name="remember" />
+            Remember me
+          </label>
+        </div>
+        <div class="sub-button">
+          <button type="submit" class="btn btn-secondary submit-button">
+            <b>Sign Up</b>
+          </button>
+        </div>
+      </form>
+    </div>
+    <!-- END OF FORM -->
+    <!-- START OF FOOTER SECTION -->
+    <footer>
       <div class="footer-full">
         <div class="footer-list">
           <ul>
