--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- START OF FORM -->
-    <div class="form d-flex justify-content-center align-items-center">
+    <div class="form signup d-flex justify-content-center align-items-center">
       <form action="/action_page.php">
         <div class="mb-3 mt-3 signin">
           <label for="email" class="form-label">Email:</label>
