--- a/login.html
+++ b/login.html
@@ -54,6 +54,10 @@
           <button type="submit" class="btn btn-secondary submit-button">
             <b>Submit</b>
           </button>
+          <div class="not">
+            <p>Not a member? <a href="signup.html" class="member">Sign Up</a></p>
+          </div>
+         
         </div>
       </form>
     </div>
