--- a/signup.html
+++ b/signup.html
@@ -21,8 +21,9 @@
   <body>
     <!-- START OF FORM -->
     <div class="form signup d-flex justify-content-center align-items-center">
-      <form action="/action_page.php">
+      <form class="up" action="/action_page.php">
         <div class="mb-3 mt-3 signin">
+          <h3 class="sin">Sign Up</h3>
           <label for="email" class="form-label">Email:</label>
           <input
             type="email"
@@ -52,6 +53,9 @@
           <button type="submit" class="btn btn-secondary submit-button">
             <b>Sign Up</b>
           </button>
+          <div class="home-page">
+            <p><a class="home" href="index.html">Home Page</a></p>
+          </div>
         </div>
       </form>
     </div>
