--- a/gallery.html
+++ b/gallery.html
@@ -61,24 +61,90 @@
     <!-- END OF NAVBAR -->
     <!-- START OF HER0-SECTION -->
     <div class="hero-gallery">
-      <img id="" src="" alt="" />
+      <h1 class="gallery"><i>Our Gallery</i></h1>
     </div>
     <!-- END OF HERO-SECTION -->
     <!-- START OF FIRST SECTION -->
     <div class="container section1-gallery">
       <div class="row">
-        <div class="col-sm-6 col-md-4">
-          <img class="img-fluid" src="images/landscape.jpg" alt="Lychee Logo" />
+        <div class="col-sm-4 col-md-4">
+          <img
+            class="img-fluid"
+            src="images/lychee-gatherer.jpg"
+            alt="Lychee Logo"
+          />
         </div>
-        <div class="col-sm-6 col-md-4">
-          <img class="img-fluid" src="images/lychee-gatherer.jpg" alt="Lychee Logo" />
+        <div class="col-sm-4 col-md-4">
+          <img class="img-fluid" src="images/gallery-3.jpg" alt="Lychee Logo" />
         </div>
-        <div class="col-sm-6 col-md-4">
-          <img class="img-fluid" src="images/farm.jpg" alt="Jar of Lychee" />
+        <div class="col-sm-4 col-md-4">
+          <img
+            class="img-fluid"
+            src="images/lychee-man.png"
+            alt="Jar of Lychee"
+          />
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-md-6">
+          <img class="sorting img-fluid" src="images/gallery-11.jpg" alt="" />
+        </div>
+        <div class="col-sm-6 col-md-6">
+          <img class="sorting img-fluid" src="images/gallery-10.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+
     <!-- END OF FIRST SECTION -->
+    <!-- START OF SECOND SECTION -->
+    <div class="container section2-gallery">
+      <div class="row">
+        <div class="col-sm-4 col-md-4">
+          <img
+            class="img-fluid pt-5"
+            src="images/gallery-7.jpg"
+            alt="Lychee Logo"
+          />
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <img class="img-fluid" src="images/gallery-8.jpg" alt="Lychee Logo" />
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <img
+            class="img-fluid pt-5"
+            src="images/gallery-6.jpg"
+            alt="Jar of Lychee"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECOND SECTION -->
+
+    <!-- START OF THIRD SECTION -->
+    <div class="container section3-gallery">
+      <div class="row align-content-center">
+        <div class="col-sm-4 col-md-4">
+          <img
+            class="img-fluid pt-5"
+            src="images/gallery-3.jpg"
+            alt="Lychee Logo"
+          />
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <img class="img-fluid" src="images/gallery-9.png" alt="Lychee Logo" />
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <img
+            class="img-fluid pt-4"
+            src="images/gallery-2.png"
+            alt="Jar of Lychee"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- END OF THIRD SECTION -->
     <!-- START OF FOOTER SECTION -->
     <footer>
       <div class="footer-full">
