--- a/login.html
+++ b/login.html
@@ -24,6 +24,16 @@
     <div class="form d-flex justify-content-center align-items-center">
       <form class="logg" action="/action_page.php">
         <h3 class="login">Log In</h3>
+        <div class="mb-3 signin">
+          <label for="pwd" class="form-label">Username:</label>
+          <input
+            type="usrname"
+            class="form-control"
+            id="pwd"
+            placeholder="Enter Username"
+            name="pswd"
+          />
+        </div>
         <div class="mb-3 mt-3 signin">
           <label for="email" class="form-label">Email:</label>
           <input
