--- a/signup.html
+++ b/signup.html
@@ -24,6 +24,16 @@
       <form class="up" action="/action_page.php">
         <div class="mb-3 mt-3 signin">
           <h3 class="sin">Sign Up</h3>
+          <div class="mb-3 signin">
+            <label for="pwd" class="form-label">Username:</label>
+            <input
+              type="usrname"
+              class="form-control"
+              id="pwd"
+              placeholder="Enter Username"
+              name="pswd"
+            />
+          </div>
           <label for="email" class="form-label">Email:</label>
           <input
             type="email"
