--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         <h1 class="how">Questions or Requests?</h1>
       </div>
       
-      <div class="baby"><img src="images/lychee-baby.jpg" alt="Baby" /></div>
+      <div class="baby"><img id="photo-bb" src="images/lychee-baby.jpg" alt="Baby" /></div>
     </div>
 
     <!-- END OF FIRST SECTION -->
