--- a/gallery.html
+++ b/gallery.html
@@ -69,17 +69,17 @@
       <div class="row">
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid"
+            class="img-fluid hat"
             src="images/lychee-gatherer.jpg"
             alt="Lychee Logo"
           />
         </div>
         <div class="col-sm-4 col-md-4">
-          <img class="img-fluid" src="images/gallery-3.jpg" alt="Lychee Logo" />
+          <img class="img-fluid bowl" src="images/gallery-3.jpg" alt="Lychee Logo" />
         </div>
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid"
+            class="img-fluid hat"
             src="images/lychee-man.png"
             alt="Jar of Lychee"
           />
@@ -109,7 +109,7 @@
           />
         </div>
         <div class="col-sm-4 col-md-4">
-          <img class="img-fluid" src="images/gallery-8.jpg" alt="Lychee Logo" />
+          <img class="img-fluid drink" src="images/gallery-8.jpg" alt="Lychee Logo" />
         </div>
         <div class="col-sm-4 col-md-4">
           <img
@@ -127,19 +127,19 @@
       <div class="row align-content-center">
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid pt-5"
-            src="images/gallery-3.jpg"
-            alt="Lychee Logo"
+            class="img-fluid pt-4"
+            src="images/gallery-1.jpg"
+            alt="Lychee family"
           />
         </div>
         <div class="col-sm-4 col-md-4">
-          <img class="img-fluid" src="images/gallery-9.png" alt="Lychee Logo" />
+          <img class="img-fluid" src="images/gallery-9.png" alt="Lychee Martini" />
         </div>
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid pt-4"
+            class="img-fluid pt-3"
             src="images/gallery-2.png"
-            alt="Jar of Lychee"
+            alt="Lychee"
           />
         </div>
       </div>
