--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
           />
         </div>
         <div class="col-sm-4 col-md-4">
-          <img class="img-fluid bowl" src="images/gallery-3.jpg" alt="Lychee Logo" />
+          <img class="img-fluid bowl" src="images/gallery-2.png" alt="Lychee Logo" />
         </div>
         <div class="col-sm-4 col-md-4">
           <img
@@ -127,8 +127,8 @@
       <div class="row align-content-center">
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid pt-4"
-            src="images/gallery-1.jpg"
+            class="img-fluid"
+            src="images/gallery-3.jpg"
             alt="Lychee family"
           />
         </div>
@@ -137,8 +137,8 @@
         </div>
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid pt-3"
-            src="images/gallery-2.png"
+            class="img-fluid"
+            src="images/gallery-1.jpg"
             alt="Lychee"
           />
         </div>
