--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             alt="Photo of Lychee Farm"
           />
         </div>
-        <div class="col-sm-6 col-md-6">
+        <div class="col-sm-6 col-md-6 farms">
           <h1 class=""><b>Luxury Lychee Farms</b></h1>
           <p>
             Luxury Lychee Farms was founded in 1952 by Kaimana and Groff Lee in
@@ -99,13 +99,16 @@
     <!-- START OF SECOND SECTION -->
     <div class="container section2-about">
       <div class="row">
-        <div class="col-sm-6 col-md-3">
-          <h4><i>Lychee?</i></h4>
+        <div class="col-sm-6 col-md-3 farms">
+          <h4><i>Our Mission</i></h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-            inventore minus animi labore delectus esse expedita nemo nesciunt
-            maiores unde tenetur quaerat voluptatibus incidunt repellat
-            exercitationem magni, rem saepe dolor!
+            Our mission is to provide and produce the freshest, juciest and
+            healthiest products. We strive to see our customers smile with
+            satisfaction. We want to continue to grow and stay the biggest
+            lychee coorperation all while taking care of our family and
+            employees. We eventually want to extend to Japan and other parts of
+            the states. We also want to create even more delicious recipies and
+            canned goods.
           </p>
         </div>
         <div class="col-sm-6 col-md-6">
@@ -115,13 +118,17 @@
             alt="Animated Lychee"
           />
         </div>
-        <div class="col-sm-12 col-md-3">
-          <h4><i>Lychee</i></h4>
+        <div class="col-sm-12 col-md-3 farms">
+          <h4><i>Workers = Family</i></h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-            hic voluptas eos incidunt, nostrum doloremque sint enim voluptate
-            quis qui aspernatur, deleniti, facilis earum similique illo. Nobis
-            sed commodi consequuntur!
+            We consider our employees as our family. We know you hear this
+            phrase a lot in the work force and most of the time it is not true.
+            However, here at Luxury Lychee we do actually care. Unlike other
+            coorperations that require extensive physical labor we provide the
+            best compensation anyone can ask for. What our employees need is
+            work-life balance and we make sure that it is provided. 40 hour work
+            weeks, always voluntary (never required) time and half paid
+            overtime, benefits, maternal leave, quarterly bonuses and much more.
           </p>
         </div>
       </div>
