--- a/gallery.html
+++ b/gallery.html
@@ -127,13 +127,13 @@
       <div class="row align-content-center">
         <div class="col-sm-4 col-md-4">
           <img
-            class="img-fluid"
+            class="img-fluid sm-mt-5"
             src="images/gallery-3.jpg"
             alt="Lychee family"
           />
         </div>
         <div class="col-sm-4 col-md-4">
-          <img class="img-fluid" src="images/gallery-9.png" alt="Lychee Martini" />
+          <img class="img-fluid sm-mt-5" src="images/gallery-9.png" alt="Lychee Martini" />
         </div>
         <div class="col-sm-4 col-md-4">
           <img
