--- a/index.html
+++ b/index.html
@@ -93,22 +93,27 @@
         <div class="col-sm-6 col-md-3 what">
           <h4><i>What is a Lychee?</i></h4>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
-            sed, voluptatem recusandae sit rerum quasi totam a ea quibusdam fuga
-            architecto nostrum cum harum. Ipsam itaque molestiae perferendis
-            praesentium odio!
+            Lychee is a tropical fruit that is unique in appearance and flavor.
+            It's native to China but can grow in certain warm regions of the U.S
+            like Florida and Hawaii. Lychee is also known as "alligator
+            strawberry" for its red, bumpy skin. Lychees are round or oblong in
+            shape and are 1 ½ to 2 inches in diameter. Their opaque white flesh
+            is fragrant and sweet, with floral notes.
           </p>
         </div>
         <div class="col-sm-6 col-md-6">
-          <img class="img-fluid" src="images/lychee-bundle.png" alt="Lychee Bundle" />
+          <img
+            class="img-fluid"
+            src="images/lychee-bundle.png"
+            alt="Lychee Bundle"
+          />
         </div>
         <div class="col-sm-12 col-md-3 use">
           <h4><i>What is Lychee used in?</i></h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-            hic voluptas eos incidunt, nostrum doloremque sint enim voluptate
-            quis qui aspernatur, deleniti, facilis earum similique illo. Nobis
-            sed commodi consequuntur!
+            Lychee fruit can be eaten on its own, used in tropical fruit salads,
+            or blended into cocktails, juices, smoothies, and desserts. It can
+            also be canned and turned into preserves.
           </p>
         </div>
       </div>
@@ -116,10 +121,14 @@
     <!-- END OF SECOND SECTION -->
     <!-- START OF THIRD SECTION -->
     <div>
-      <img class="img-fluid home-of-lychee" src="images/home-of-lychee.jpg" alt="Home within lychee farm" />
+      <img
+        class="img-fluid home-of-lychee"
+        src="images/home-of-lychee.jpg"
+        alt="Home within lychee farm"
+      />
     </div>
     <!-- END OF THIRD SECTION -->
-   
+
     <!-- START OF FOOTER SECTION -->
     <footer>
       <div class="footer-full">
