--- a/gallery.html
+++ b/gallery.html
@@ -67,17 +67,17 @@
     <!-- START OF FIRST SECTION -->
     <div class="container section1-gallery">
       <div class="row">
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-12 col-md-4 mb-3">
           <img
             class="img-fluid hat"
             src="images/lychee-gatherer.jpg"
             alt="Lychee Logo"
           />
         </div>
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-12 col-md-4 mb-3">
           <img class="img-fluid bowl" src="images/gallery-2.png" alt="Lychee Logo" />
         </div>
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-12 col-md-4 mb-3">
           <img
             class="img-fluid hat"
             src="images/lychee-man.png"
@@ -88,10 +88,10 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-6">
+        <div class="col-sm-6 col-md-6 mb-3">
           <img class="sorting img-fluid" src="images/gallery-11.jpg" alt="" />
         </div>
-        <div class="col-sm-6 col-md-6">
+        <div class="col-sm-6 col-md-6 mb-3">
           <img class="sorting img-fluid" src="images/gallery-10.jpg" alt="" />
         </div>
       </div>
@@ -101,7 +101,7 @@
     <!-- START OF SECOND SECTION -->
     <div class="container section2-gallery">
       <div class="row">
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-4 col-md-4 mb-3">
           <img
             class="img-fluid pt-5"
             src="images/gallery-7.jpg"
@@ -111,7 +111,7 @@
         <div class="col-sm-4 col-md-4">
           <img class="img-fluid drink" src="images/gallery-8.jpg" alt="Lychee Logo" />
         </div>
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-4 col-md-4 mb-3">
           <img
             class="img-fluid pt-5"
             src="images/gallery-6.jpg"
@@ -125,21 +125,21 @@
     <!-- START OF THIRD SECTION -->
     <div class="container section3-gallery">
       <div class="row align-content-center">
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-4 col-md-4 mb-3">
           <img
             class="img-fluid sm-mt-5"
             src="images/gallery-3.jpg"
             alt="Lychee family"
           />
         </div>
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-4 col-md-4 mb-3">
           <img class="img-fluid sm-mt-5" src="images/gallery-9.png" alt="Lychee Martini" />
         </div>
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-4 col-md-4 mb-3">
           <img
             class="img-fluid"
             src="images/gallery-1.jpg"
-            alt="Lychee"
+            alt="Lychee" style=" width: 600px ;"
           />
         </div>
       </div>
